examples/constants.sl
static_variable! := "hello world"

// ! = const

static_variable > "goodbye world"
// error